<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.drivingschool.android.ui.DashboardActivity">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        android:icon="@drawable/ic_dashboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_curplan"
        android:orderInCategory="100"
        android:title="@string/current_plan"
        android:icon="@drawable/ic_dashboard"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:icon="@drawable/ic_dashboard"
        app:showAsAction="never" />
</menu>
