<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
  >


    <LinearLayout
        android:id="@+id/main_layu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_150sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:src="@drawable/logo"
            />


        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <com.drivingschool.android.customviews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/enter_otp"
                android:textSize="@dimen/_15sdp"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="2dp"
                >

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:tint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_pass" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="18dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    android:padding="3dp" />

                <EditText
                    android:id="@+id/edOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:hint="@string/enter_otp"
                    android:padding="@dimen/_3sdp"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    />

            </LinearLayout>


            <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/btnSubmitOTP"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_layout_sky"
                android:gravity="center"
                android:elevation="@dimen/_5sdp"
                android:layout_margin="@dimen/_20sdp"
                android:padding="5dp"
                android:textSize="16sp"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notInternetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/check_your_con"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/no_internet_icon"
            />

    </LinearLayout>


</RelativeLayout>
