<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginActivity"
    >

    <LinearLayout
        android:id="@+id/main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:padding="@dimen/_20sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="2dp"
                >

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:tint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_email" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="18dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    android:padding="3dp" />

                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:hint="@string/email"
                    android:padding="@dimen/_3sdp"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="2dp"
                >

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:tint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_pass" />

                <View
                    android:layout_width="0.4dp"
                    android:layout_height="18dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    android:padding="3dp" />

                <EditText
                    android:id="@+id/edPsw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_3sdp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorPrimaryDark"
                    />

            </LinearLayout>


            <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/txtForgotPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/forgot_password"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_layout_sky"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <com.drivingschool.android.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Don't have an account ?"
                android:textSize="@dimen/_12sdp" />

            <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:gravity="center"
                android:text="SIGN UP"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp"/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/notInternetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/check_your_con"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/no_internet_icon"
            />

    </LinearLayout>



</RelativeLayout>